# godot-mcp

./: .gitignore  LICENSE  README.md
addons/godot_mcp/: mcp_server.gd  mcp_server.gd.uid  plugin.cfg  plugin.gd  plugin.gd.uid
server/: README.md  godot_mcp_server.py  pyproject.toml
